@@ -338,6 +338,9 @@ Syscall param socketcall.setsockopt(optval) points to unaddressable byte(s)
 (110):           old sigsetmask
 -----------------------------------------------------
 -----------------------------------------------------
+x200006f(111):     __NR_sigsuspend ignore
+-----------------------------------------------------
+-----------------------------------------------------
 (112):           old sigstack
 -----------------------------------------------------
 -----------------------------------------------------
